# gaelspell-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
scripts/: acceptance.sh
src/: lib.rs  main.rs
src/lingua/: mod.rs
src/lingua/ga/: gaelspell.rs  mod.rs
tests/: api.rs  http.rs
